--- a/src/universidadgrupo/Vistas/FormListadoAlumnosXMateria.form
+++ b/src/universidadgrupo/Vistas/FormListadoAlumnosXMateria.form
@@ -39,7 +39,7 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
               <Component id="jBSalir" min="-2" pref="103" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
